#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-24
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - in calib change order of corrections; 1) common mode, 2) mask from status (PSAS-139) 
	
Tag: V00-03-23
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - fix return from status_as_mask, ex_all_dets.py - update example for det.mask
	
Tag: V00-03-22
2016-01-15 TJ Lane
- Fix issue where aliases were not correctly mapped for non-AreaDetectors

Tag: V00-03-21
2016-01-07 TJ Lane
- Fix typo

Tag: V00-03-20
2016-01-07 TJ Lane
- Added ConfigDataDetector type

Tag: V00-03-19
2016-01-07 Mikhail S. Dubrovin
- PyDetectorAccess.py - fix issue with initialization of self.mbits in constructor (PSAS-139)

Tag: V00-03-18
2016-01-06 Christopher O'Grady
- Refactor the detector factory so people can query the detector
  type for a particular source name.  Add IpimbDetector to DetectorTypes.py
  (for non-bld detectors)

Tag: V00-03-17
2016-01-05 Christopher O'Grady
- Fix EpicsDetector import

Tag: V00-03-16
2015-12-18 TJ Lane
- Added IpimbDetector
- Added explicit list of BldInfo detector types
- modified DdlDetector to have .get() instead of __call__()

Tag: V00-03-15
2015-12-18 Mikhail S. Dubrovin
- PyDetectorAccess.py - add local caching for coords_x,y,z, areas, self.mask_geo, self.pixel_size (PSAS-139)
- add examples/test_geo_time.py
	
Tag: V00-03-14
2015-12-15 Mikhail S. Dubrovin
- AreaDetector.py add returning geometry object method, add ex_cspad_quads_data.py (PSAS-139)

Tag: V00-03-13
2015-12-14 Mikhail S. Dubrovin
- app/det_ndarr_average - evaluate and save ndarray for max value, 